 * ChangeLog (oldest first):
 *
 * Started by Alexander Lehmann <alex@hal.rhein-main.de> and subsequently
 * extended by people as listed below.
 *
 *   AL   -  Alexander Lehmann
 *   AED  -  Andreas Dilger
 *   GRP  -  Glenn Randers-Pehrson
 *   GRR  -  Greg Roelofs
 *   JB   -  John Bowler
 *   TGL  -  Tom Lane
 *
 * 19950223 AL:  fixed wrong magic numbers
 *               ["version 1.1"]
 *               ---------------
 * 19950313 AL:  CRC code from PNG spec; compiles on memory-impaired PCs now;
 *               check for IHDR/IEND chunks
 *               ["version 1.2"]
 *               ---------------
 * 19950325 GRP: rewrote magic-number-checking and moved it to PNG_check_magic()
 *               ["version 1.3"]
 *               ---------------
 * 19950327 AL:  fixed CRC code for 64-bit; -t switch; unsigned char vs. char
 *               pointer changes
 *               ["version 1.4"]
 *               ---------------
 * 19960601 AL:  check for data after IEND chunk
 *               ["version 1.5"]
 *               ---------------
 * 19950601 GRR: reformatted; print tEXt and zTXt keywords; added usage
 * 19950601 GRR: released version 1.6, a.k.a. pngcheck-grr1.c
 *               --------------------------------------------
 * 19950607 GRR: print image info (IHDR) and tIME; enable EMX wildcards
 * 19950615 GRR: released version 1.61, a.k.a. pngcheck-grr2.c
 *               ---------------------------------------------
 * 19950731 AL:  check for control chars; check for MacBinary header; new
 *               force option
 * 19950731 AL:  released version 1.7
 *               --------------------
 * 19950827 AL:  merged Greg's 1.61 changes: print IHDR and tIME contents,
 *               call emx wildcard function
 * 19950827 AL:  released version 1.8
 *               --------------------
 * 19950904 GRR: added brackets on keyword error messages to distinguish from
 *               keyword text
 * 19950904 GRR: released version 1.81