@@ -1,6 +1,6 @@
-.TH PNGCHECK "1" "January 2021" "pngcheck 3.0.2" "User Commands"
+.TH PNGCHECK "1" "April 2021" "pngcheck 3.0.3" "User Commands"
 .SH NAME
-pngcheck \- manual page for pngcheck 3.0.2
+pngcheck \- manual page for pngcheck 3.0.3
 .SH SYNOPSIS
 .B pngcheck
 .RI [ \-7cpqtv ]
@@ -13,7 +13,7 @@ pngcheck \- manual page for pngcheck 3.0.2
 .B pngcheck
 .RI [ \-7cpqstvx ] \ file-containing-PNGs ...
 .SH DESCRIPTION
-PNGcheck, version 3.0.2 of 31 January 2021,
+PNGcheck, version 3.0.3 of 25 April 2021,
 by Alexander Lehmann, Andreas Dilger and Greg Roelofs.
 .PP
 Test PNG, JNG or MNG image files for corruption, and print size/type info.
